Fix bug and add auth docs
